# aiops

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: architecture.md  azure-openai.md  enterprise-integration.md  microsoft-login.md  python-environment.md  remediation-catalog.md
infra/: main.bicep
samples/: azure-monitor-vmss-high-cpu.json
samples/kql/: azuremetrics-firewall-incident-signals.kql  azuremetrics-operational-summary.kql  fake-firewall-incident.kql
samples/requests/: log-analytics-analyze-azuremetrics.json  log-analytics-poll-fake-firewall-incident.json  log-analytics-poll-firewall-alerts.json
src/aiops_agent/: __init__.py  alert_parser.py  analyzer.py  app.py  auth.py  azure_clients.py  azure_openai.py  config.py  models.py  remediation.py  state.py  worker.py  workflow.py
tests/: conftest.py  test_alert_parser.py  test_api_workflow.py  test_enterprise_integrations.py  test_guardrails.py
