[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-aiops-agent"
version = "0.1.0"
description = "Azure-native AIOps agent for VM and VM Scale Set incident management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.27,<1.0",
  "openai>=1.30,<2.0",
  "azure-identity>=1.16,<2.0",
  "azure-monitor-query>=1.4,<2.0",
  "azure-mgmt-resourcegraph>=8.0,<9.0",
  "azure-mgmt-compute>=30.0,<35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
aiops-worker = "aiops_agent.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
